# contracts/api/marketplace-central.openapi.yaml
@@ -554,6 +554,9 @@ components:
         length_cm:
           type: number
           nullable: true
+        weight_g:
+          type: number
+          nullable: true
     TaxonomyNode:
       type: object
       properties:
@@ -583,6 +586,9 @@ components:
           type: number
           nullable: true
         length_cm:
+          type: number
+          nullable: true
+        weight_g:
           type: number
           nullable: true
         suggested_price_amount:
